<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tax.Receipt_Display"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_light"
    >

    <TextView
        android:id="@+id/Cardtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Receipt"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        >
    </TextView>

    <ImageView
        android:id="@+id/Title"
        android:layout_width="189dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp">

    </ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_break"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        ></ImageView>

    <ImageView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxHeight="450dp"
        android:src="@drawable/logo"></ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_break"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        ></ImageView>
    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        >
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:text="Delete Receipt"
        android:background="@drawable/roundedbutton"
        android:textColor="@android:color/darker_gray"
        android:onClick="Del"
        ></Button>
</LinearLayout>