...
        android:layout_height="140px"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:text="View Spending"
        android:background="@drawable/roundedbutton"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/ViewAll"
        android:onClick="ViewAll"
        >
    </Button>

</LinearLayout>
