<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".tax.Receipt_Display"
android:orientation="vertical"
android:background="@android:color/holo_orange_light"
    >

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:text="Receipt"
    android:textSize="20dp"
    android:textColor="@android:color/black"
    android:textStyle="bold"
    android:layout_marginTop="20dp"
    >
</TextView>

<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/line_break"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    ></ImageView>



    <ImageView
        android:id="@+id/RecView"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxHeight="400dp"
        android:src="@drawable/logo"></ImageView>

</LinearLayout>