...
            ></ImageView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="125px"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="April"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/darker_gray"
            android:textSize="15dp"
            android:onClick="April"
            >
...
