<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_light"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"


        >

    </TextView>
    <ImageView
        android:id="@+id/Title"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" >
    </ImageView>
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
       />

    <EditText
        android:id="@+id/ReEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="Re-Enter Password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"/>
    <Button
        android:id="@+id/registerNewClient"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/roundedbutton"
        android:text="Register"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="register"/>




</LinearLayout>


